--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>G3 Architects</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="work-sans-font">
     <head>
-        
+        <div class="navbar">
+            <h3 class="brand">G3 Architects</h3>
+        </div>
     </head>
     <main>
 
