--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="bg-light">
         <nav class="navbar display-flex">
             <h3 class="brand">G3 Architects</h3>
-            <ul class="nav-link display-flex">
+            <ul class="nav-links display-flex">
                 <!-- li.nav-item*4>a.nav-link -->
                 <li class="nav-item"><a href="" class="nav-link text-gray">Home</a></li>
                 <li class="nav-item"><a href="" class="nav-link text-gray">About</a></li>
@@ -32,7 +32,19 @@
         </div>
     </header>
     <main>
-
+        <section class="teams display-flex">
+            <div class="team-image-container">
+                <img src="images/team1.png" alt="discussing 2 architect">
+                <img src="images/team2.png" alt="one male and two female posing">
+                <img src="images/team3.png" alt="1 male 1 female discussing with laptop">
+                <img src="images/team4.png" alt="1 male 1 female discussing in standing">
+            </div>
+            <div class="our-features">
+                <h3 class="feature-title"><span id="quick-list" class="text-light-gray">Quick list</span> <span>of Our</span> <span class="text-primary">Features</span></h3>
+                <p class="feature-description text-light-gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique libero enim quaerat rem nobis error!</p>
+                <div class="btn-primary">Explore More</div>
+            </div>
+        </section>
     </main>
     <footer>
 
