--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         </div>
     </header>
     <main>
+        <!-- teams section start -->
         <section class="teams display-flex">
             <div class="team-image-container">
                 <img src="images/team1.png" alt="discussing 2 architect">
@@ -40,11 +41,53 @@
                 <img src="images/team4.png" alt="1 male 1 female discussing in standing">
             </div>
             <div class="our-features">
-                <h3 class="feature-title"><span id="quick-list" class="text-light-gray">Quick list</span> <span>of Our</span> <span class="text-primary">Features</span></h3>
-                <p class="feature-description text-light-gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique libero enim quaerat rem nobis error!</p>
+                <h3 class="section-title"><span id="quick-list" class="text-light-gray">Quick list</span> <span>of
+                        Our</span> <span class="text-primary">Features</span></h3>
+                <p class="feature-description text-light-gray">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Similique libero enim quaerat rem nobis error!</p>
                 <div class="btn-primary">Explore More</div>
             </div>
         </section>
+        <!-- Some facts -->
+        <section>
+            <h3 class="section-title">Some Facts</h3>
+            <p class="text-light-gray fact-description">There are many variations of passages of Lorem Ipsum available,
+                but the majority
+                have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            <div class="facts-container">
+                <!-- .fact-card*4>img+h4.fact-number+h5.fact-name -->
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/icons/ribon.png" alt="">
+                        <h4 class="fact-number">54</h4>
+                        <h5 class="fact-name">Award Winning</h5>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/icons/projects.png" alt="">
+                        <h4 class="fact-number">1458</h4>
+                        <h5 class="fact-name">Projects Finished</h5>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/icons/customers.png" alt="">
+                        <h4 class="fact-number">590</h4>
+                        <h5 class="fact-name">Clients Worked</h5>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/icons/email.png" alt="">
+                        <h4 class="fact-number">22578 </h4>
+                        <h5 class="fact-name">Email Send</h5>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!--  -->
+        <section class="some-facts">Some Facts</section>
     </main>
     <footer>
 
