--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
     </header>
     <main>
-        <!-- teams section start -->
+        <!-- Teams section start -->
         <section class="teams display-flex">
             <div class="team-image-container">
                 <img src="images/team1.png" alt="discussing 2 architect">
@@ -46,6 +46,24 @@
                 <p class="feature-description text-light-gray">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Similique libero enim quaerat rem nobis error!</p>
                 <div class="btn-primary">Explore More</div>
+            </div>
+        </section>
+        <!-- Features section -->
+        <section class="features">
+            <div>
+                <h3 id="feature-section-title" class="section-title">Features you will <br>love & enjoy</h3>
+                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration in some form, by injected humour, or randomised words which don't
+                    look even</p>
+
+                <!--Feature card content -->
+                <div class="feature-card">
+                    <h4 class="feature-title">Dexktop & Mobile Version</h4>
+
+                </div>
+            </div>
+            <div>
+                <img src="images/architect.png" alt="">
             </div>
         </section>
         <!-- Some facts -->
@@ -90,10 +108,13 @@
         <section class="our-sponsors">
             <div class="sponsor-info">
                 <h3 class="sponsor-title section-title">Our Sponsors</h3>
-                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration.</p>
             </div>
             <div class="sponsor-companies">
-                <img src="images/sponsors/spotify.png" alt=""><img src="images/sponsors/amazon.png" alt=""><img src="images/sponsors/google.png" alt=""><img src="images/sponsors/telerama.png" alt=""><img src="images/sponsors/figma.png" alt="">
+                <img src="images/sponsors/spotify.png" alt=""><img src="images/sponsors/amazon.png" alt=""><img
+                    src="images/sponsors/google.png" alt=""><img src="images/sponsors/telerama.png" alt=""><img
+                    src="images/sponsors/figma.png" alt="">
             </div>
         </section>
     </main>
