--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
         <div class="banner">
             <div class="banner-content">
                 <h1 class="banner-title">Brand New Group of Architects</h1>
-                <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the
-                    majority have suffered alteration in some form, by injected humour, or randomised words which don't
-                    look even</p>
+                <p class="banner-description">Brand New Group of Architects is a creative team dedicated to innovative, sustainable designs that blend modern aesthetics with functionality, transforming spaces to inspire and elevate experiences.</p>
                 <button class="btn-primary">Explore More</button>
             </div>
             <img src="images/banner.png" alt="">
@@ -43,64 +41,55 @@
             <div class="our-features">
                 <h3 class="section-title"><span id="quick-list" class="text-light-gray">Quick list</span> <span>of
                         Our</span> <span class="text-primary">Features</span></h3>
-                <p class="feature-description text-light-gray">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Similique libero enim quaerat rem nobis error!</p>
-                <div class="btn-primary">Explore More</div>
+                <p class="feature-description text-light-gray">Explore our innovative architectural solutions, designed for functionality and aesthetics, offering seamless user experience and high-quality design across all platforms.</p>
+                <div class="btn-primary btn-raf">Explore More</div>
             </div>
         </section>
         <!-- Features section -->
         <section class="features display-flex">
             <div>
                 <h3 id="feature-section-title" class="section-title">Features you will <br>love & enjoy</h3>
-                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the
-                    majority have suffered alteration in some form, by injected humour, or randomised words which don't
-                    look even</p>
+                <p class="text-light-gray">Enjoy a range of smart features, from customizable layouts to advanced navigation, making it easier to visualize your dream project with intuitive tools.</p>
 
                 <!--Feature card contentainer -->
                 <div class="feature-card">
                     <h4 class="feature-title">Desktop & Mobile Version</h4>
-                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the
-                        majority have suffered alteration in some form, by injected humour, or randomised...........
+                    <p class="text-light-gray">Our website is fully responsive, providing optimal viewing and seamless interaction whether on desktop, tablet, or mobile devices, anytime, anywhere.
                     </p>
                 </div>
 
                 <div class="feature-card">
                     <h4 class="feature-title">Drag & Drop Builder</h4>
-                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the
-                        majority have suffered alteration in some form, by injected humour, or randomised...........
+                    <p class="text-light-gray">Effortlessly create and customize your site with our intuitive drag-and-drop builder, allowing you to shape your project quickly and without coding knowledge.
                     </p>
                 </div>
 
                 <div class="feature-card">
                     <h4 class="feature-title"> Awesome Modern Design</h4>
-                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the
-                        majority have suffered alteration in some form, by injected humour, or randomised...........
+                    <p class="text-light-gray">Our design is sleek and contemporary, showcasing cutting-edge architecture trends with a focus on clarity, style, and user-friendly interfaces.
                     </p>
                 </div>
 
                 <div class="feature-card">
                     <h4 class="feature-title">Super Easy to Edit</h4>
-                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the
-                        majority have suffered alteration in some form, by injected humour, or randomised...........
+                    <p class="text-light-gray">Editing is a breeze with our easy-to-use platform, offering flexible tools and intuitive controls to make updates and adjustments without hassle.
                     </p>
                 </div>
 
             </div>
 
-            <div>
-                <img src="images/architect.png" alt="">
+            <div class="feature-architect">
+                <img class="feature-architect" src="images/architect.png" alt="">
                 <button id="experience-badge" class="btn-primary">
-                    <span>10+ Years</span><br>
-                    <span id="experiance-year">experience</span>
+                    <span id="experience-year">10+Years</span><br>
+                    <span>Experience</span>
                 </button>
             </div>
         </section>
         <!-- Some facts -->
         <section>
             <h3 class="section-title">Some Facts</h3>
-            <p class="text-light-gray fact-description">There are many variations of passages of Lorem Ipsum available,
-                but the majority
-                have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            <p class="text-light-gray fact-description">We’ve successfully delivered over 100 projects, with a focus on innovative architecture and client satisfaction, helping shape the future of design and construction.</p>
             <div class="facts-container">
                 <!-- .fact-card*4>img+h4.fact-number+h5.fact-name -->
                 <div class="fact-card display-flex">
@@ -137,8 +126,7 @@
         <section class="our-sponsors">
             <div class="sponsor-info">
                 <h3 class="sponsor-title section-title">Our Sponsors</h3>
-                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the
-                    majority have suffered alteration.</p>
+                <p class="text-light-gray">Our work is supported by renowned industry leaders, bringing together expertise and resources to deliver top-notch solutions that exceed expectations.</p>
             </div>
             <div class="sponsor-companies">
                 <img src="images/sponsors/spotify.png" alt=""><img src="images/sponsors/amazon.png" alt=""><img
@@ -147,9 +135,8 @@
             </div>
         </section>
     </main>
-    <footer>
-
+    <footer >
+        <p class="footer-content">All rights reserved copyright@2025 startup landing page design</p>
     </footer>
 </body>
-
 </html>
